--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -638,6 +638,17 @@ var fullscreen = false;  //initial state
         <div class="col-sm-8">1.0 is disabled.</div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.SHARPEN_AMOUNT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.SHARPEN_AMOUNT(class='form-control bg-secondary') }}
+            <div id="SHARPEN_AMOUNT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">0.0 is disabled.  Unsharp mask highpass filter.  0.5 is a good starting point, max 2.0</div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -1990,6 +2001,7 @@ const field_names = [
     'WBB_MTF_MIDTONES',
     'SATURATION_FACTOR',
     'GAMMA_CORRECTION',
+    'SHARPEN_AMOUNT',
     'IMAGE_COLORMAP',
     'IMAGE_ROTATE',
     'IMAGE_ROTATE_ANGLE',
