--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -927,7 +927,7 @@ $('#form_timezone').on('submit', function() {
         <input class="form-check-input" id="FLUSH_IMAGES_CONFIRM1" name="FLUSH_IMAGES_CONFIRM1" type="checkbox" value="y"> Confirm 1
     </div>
     <div class="col-sm-2">
-        <button class="btn btn-danger" id="button_flush_images_16min">Flush Images</button>
+        <button class="btn btn-danger" id="button_flush_images">Flush Images</button>
     </div>
     <div class="col-sm-2">
         <input class="form-check-input" id="FLUSH_IMAGES_CONFIRM2" name="FLUSH_IMAGES_CONFIRM2" type="checkbox" value="y"> Confirm 2
@@ -1063,6 +1063,7 @@ function button_click(service, command) {
 
             $("#button_validate_db").prop('disabled', false);
             $("#button_flush_images").prop('disabled', false);
+            $("#button_flush_16min_images").prop('disabled', false);
             $("#button_flush_timelapses").prop('disabled', false);
             $("#button_flush_daytime").prop('disabled', false);
 
