--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4560,6 +4560,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Round-Displays" class="text-decoration-none link-info" target="_blank">Round Display Wiki</a></div>
             <div>Generate an image for a circular display - <a href="images/circular_display.jpg" class="text-decoration-none link-info" target="_blank">Link</a> </div>
         </div>
     </div>
