switch back to jpeg for focus

--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -107,8 +107,8 @@ function showImage(image_b64) {
     };
 
 
-    //img.src = "data:image/jpeg;base64," + image_b64;
-    img.src = "data:image/png;base64," + image_b64;
+    img.src = "data:image/jpeg;base64," + image_b64;
+    //img.src = "data:image/png;base64," + image_b64;
 }
 
 
